--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+
 body{
 	margin: 0px auto;
 
@@ -20,27 +21,25 @@ ul, li,  a {
 	font-family: 'Prompt';
 	margin-left: 10px;
 	margin-top: 12px;
-	
 }
+
 .fondo{
 	background-color: #622A4D;
 	padding: 9px 30px;
 
 }
 
-
 .banner{
 	background-image: url(../img/img-1.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
+	position: relative;
 	height: 450px;
 	text-align: center;
-	padding-left: 100px;
-	padding-right: 100px;
-	
+	margin: 0 auto;
+	padding-top: 9%;
+	padding-left: 29%;
 }
-
-
 
 .soft{
 	font-family: 'Baloo Paaji';
@@ -49,8 +48,6 @@ ul, li,  a {
 	text-align: center;
 	margin: 0 auto;
 	padding: 0 auto;
-
-
 	
 }
 .caja{
@@ -59,14 +56,13 @@ ul, li,  a {
 	width: 40%;
 	text-align: center;
 	position: absolute;
-	margin-top: 7%;
-	margin-left: 22%;
-	
+	display: block;
+	padding: 30px 20px 30px 20px;
+
 }
 
 .live{
 	color: #B685BB;
-
 	font-size: 19px;
 }
 
@@ -106,8 +102,8 @@ ul, li,  a {
 /*tercera parte*/
 .tercera-parte{
 	
-	padding-left: 100px;
-	padding-right: 100px;
+	padding-left: 90px;
+	padding-right: 90px;
 }
 .conejo{
 	width: 100%;
@@ -116,47 +112,50 @@ ul, li,  a {
 }
 
 
-.caja-dos{
-	background-color: #E7F5FB;
-	margin-right: 10%;
-	margin-top: 5%;
-
-}
 .video{
-	width: 100%;
+    margin-bottom: -7px;
+	display: block;
 	margin: 0 auto;
-	border:0px;
-	margin-top: -30px;
+	display: block;
+	margin-bottom: 0;
+	
 }
-.segunda-columna{
-	float: left;
-	display: inline-block;
 
-}
 .caja-uno{
 	padding: 2% 5%;
-}
-.social{
-	color: #EAEDFB;
-	padding-left: 0 auto;
-	padding-right: 0 auto;
-	text-align: center;
 	margin: 0 auto;
-	margin-right: 50px;
-}
-
-.fa{
-	background-color: #FFFFFF;
-	border-radius: 100%;
-	text-align: center;
-	font-size: 23px;
-	width: 30px;
-	height: 30px;
 }
 .texto{
-	padding: 2% 4%;
-	background-color: #E7F5FB;
+	background-color: #BCFBE7;
+	padding: 2% 5%;
+
 }
+
+.social{
+	color: #DEFBFB;
+	float: left;
+
+
+	text-align: center;
+	
+}	
+    
+.fa{
+	font-size: 23px;
+	text-align: center;
+}
+
+.bars {
+	background-color: #622A4D;
+	color: #F4FBEB;
+    font-size: 100px;
+    display: none;
+    position: absolute;
+    right: 20%;
+}
+
+
+
 h2{
 	font-family: 'Baloo Paaji';
 	text-align: center;
@@ -173,6 +172,7 @@ form{
 	margin-top: 6%;
 	margin-left: 5%;
 	margin-bottom: 2%;
+
 }
 
 input, textarea{
@@ -195,31 +195,43 @@ footer{
 	padding: 2% 5%;
 	border-top: solid  4px #288FFB;
 }
-
-@media only screen and (min-width: 480px) and (max-width: 768px){
-
-	ul, li,  a {
-		text-decoration: none;
-		list-style: none;
-		display: inline-block;	
-		text-align: center;
-		color: #737491;
-		font-size: 10px;
-		font-family: 'Prompt';
-		margin-left: 10px;
-		margin-top: 12px;
-
+@media (max-width: 479px) {
+	.bars {
+		background-color: #622A4D;
+	    font-size: 100px;
+	    display: block;
+	    position: absolute;
+	    right: 20%;
+	    font-size: 42px;
 	}
+
+	nav{
+		display: none
+	}
+     
+
 	.soft{
-		font-size: 3px;
-		margin: 0 auto;
-		padding: 0 auto;
+		font-family: 'Baloo Paaji';
+	    font-size: 60px;
+	    color: #4ACFFB;
+	    text-align: center;
+	    margin: 0 auto;
+	    padding: 0 auto;
 	}
 
 	.caja{
 		background-color: #CEEDFB;
-		height: 10px;
-
+		margin-top: 20%;
+	    width: 200px;
+	    text-align: center;
+        		
 	}
+	 input{
+	 	width: 100%;
+	 }
+	
+	ul li{
+	 	font-size: 2px;
+	 }
 
 }
